# kmindex

./: .gitmodules
lib/: CMakeLists.txt
lib/include/kmindex/index/: index_infos.hpp  kindex.hpp
lib/src/index/: index_infos.cpp  kindex.cpp
